--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ async-generator==1.10
 attrs==21.4.0
 certifi==2021.10.8
 cffi==1.15.0
+charset-normalizer==2.0.12
 click==8.1.3
 cryptography==36.0.2
 Flask==2.1.2
@@ -26,7 +27,9 @@ pyOpenSSL==22.0.0
 pyparsing==3.0.7
 PySocks==1.7.1
 python-dateutil==2.8.2
+python-dotenv==0.20.0
 pytz==2022.1
+requests==2.27.1
 selenium==3.141.0
 six==1.16.0
 sniffio==1.2.0
