--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,15 +33,11 @@ jobs:
         - name: Checkout
           uses: actions/checkout@v3
 
-      env:
-          PRIVATE_KEY: ${{ secrets.EC2_PRIVATE_KEY  }}
-          HOSTNAME : ${{ secrets.EC2_HOSTNAME  }}
-          USER_NAME : ${{ secrets.EC2_USERNAME  }}
-          
-      run: |
-        echo "$PRIVATE_KEY" > private_key && chmod 400 private_key
-        ssh -o StrictHostKeyChecking=no -i private_key ${{ secrets.EC2_USERNAME  }}@${{ secrets.EC2_HOSTNAME  }} '
-        
-          #Now we have got the access of EC2 and we will start the deploy .
-          sudo docker-compose rm -s -v -f search_engine
-          sudo docker-compose up search_engine
+        - name: Run docker-compose
+          run: |
+            echo "$PRIVATE_KEY" > private_key && chmod 400 private_key
+            ssh -o StrictHostKeyChecking=no -i private_key ${{ secrets.EC2_USERNAME  }}@${{ secrets.EC2_HOSTNAME  }} '
+            
+              #Now we have got the access of EC2 and we will start the deploy .
+              sudo docker-compose rm -s -v -f search_engine
+              sudo docker-compose up search_engine
