cd fix detached launch of container

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -40,4 +40,4 @@ jobs:
             
               #Now we have got the access of EC2 and we will start the deploy .
               sudo docker-compose rm -s -v -f search_engine
-              sudo docker-compose up search_engine
+              sudo docker-compose up search_engine -d
