--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -39,5 +39,7 @@ jobs:
             ssh -o StrictHostKeyChecking=no -i private_key ${{ secrets.EC2_USERNAME  }}@${{ secrets.EC2_HOSTNAME  }}
             
               #Now we have got the access of EC2 and we will start the deploy .
+              whoami
+              ls
               sudo docker-compose rm -s -v -f search_engine
               sudo docker-compose up -d search_engine
