--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -36,10 +36,8 @@ jobs:
         - name: Run docker-compose
           run: |
             echo "${{ secrets.EC2_PRIVATE_KEY  }}" > private_key && chmod 400 private_key
-            ssh -o StrictHostKeyChecking=no -i private_key ${{ secrets.EC2_USERNAME  }}@${{ secrets.EC2_HOSTNAME  }}
+            ssh -o StrictHostKeyChecking=no -i private_key ${{ secrets.EC2_USERNAME  }}@${{ secrets.EC2_HOSTNAME  }} ; whoami
             
               #Now we have got the access of EC2 and we will start the deploy .
-              whoami
-              ls
               sudo docker-compose rm -s -v -f search_engine
               sudo docker-compose up -d search_engine
