--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -36,6 +36,8 @@ jobs:
         - name: Run docker-compose
           run: |
             echo "${{ secrets.EC2_PRIVATE_KEY  }}" > private_key.pem && chmod 400 private_key.pem
+            echo  "ceci est un test" > test
+            cat test
             ssh -o StrictHostKeyChecking=no -i "private_key.pem" ${{ secrets.EC2_USERNAME  }}@${{ secrets.EC2_HOSTNAME  }} ; whoami
             
               #Now we have got the access of EC2 and we will start the deploy.
