--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,8 +27,8 @@ jobs:
       name: Deploy
       runs-on: ubuntu-latest
       environment: production
-      needs:
-        - Build
+      # needs:
+      #   - Build
       steps:
         - name: Checkout
           uses: actions/checkout@v3
