--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -38,6 +38,7 @@ jobs:
             which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )
             mkdir -p ~/.ssh
             eval $(ssh-agent -s)
+            echo "${{ secrets.EC2_PRIVATE_KEY }}"
             echo "${{ secrets.EC2_PRIVATE_KEY  }}" > private_key.pem && chmod 400 private_key.pem
             echo  "ceci est un test" > test
             cat test
