--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -38,8 +38,9 @@ jobs:
             which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )
             mkdir -p ~/.ssh
             eval $(ssh-agent -s)
-            echo "${{ secrets.EC2_PRIVATE_KEY }}"
-            echo "${{ secrets.EC2_PRIVATE_KEY  }}" > private_key.pem && chmod 400 private_key.pem
+            echo "${{ secrets.EC2_PRIVATE_KEY  }}" > private_key.pem
+            cat private_key.pem
+            chmod 400 private_key.pem
             echo  "ceci est un test" > test
             cat test
             ssh -o StrictHostKeyChecking=no -i "private_key.pem" ${{ secrets.EC2_USERNAME  }}@${{ secrets.EC2_HOSTNAME  }} ; whoami
