--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -39,11 +39,10 @@ jobs:
             mkdir -p ~/.ssh
             eval $(ssh-agent -s)
             echo "${{ secrets.EC2_PRIVATE_KEY  }}" > private_key.pem
-            cat private_key.pem
-            chmod 400 private_key.pem
+            chmod 600 private_key.pem
             echo  "ceci est un test" > test
             cat test
-            ssh -o StrictHostKeyChecking=no -i "private_key.pem" ${{ secrets.EC2_USERNAME  }}@${{ secrets.EC2_HOSTNAME  }} ; whoami
+            ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.EC2_USERNAME  }}@${{ secrets.EC2_HOSTNAME  }}
             
               #Now we have got the access of EC2 and we will start the deploy .
               sudo docker-compose rm -s -v -f search_engine
