--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,23 @@
 version: '3'
 services:
-  search_engine:
-    image: aminehajali/neo-searchengine:latest
-    restart: unless-stopped
+  frontend:
+    build: ./front
+    ports:
+      - 3000:3000
+    environment:
+      - REACT_APP_BACKEND_URL=http://localhost:5000
+
+  backend:
+    build: ./back
     ports:
       - 5000:5000
     environment:
       - NEO4J_URL=bolt://neo4j:7687
+      - NEO4J_USERNAME=neo4j
+      - NEO4J_PASSWORD=pwd
 
   neo4j:
     image: neo4j:3.5
-    restart: unless-stopped
     ports:
       - 7474:7474
       - 7687:7687
@@ -25,3 +32,4 @@ services:
       - NEO4J_dbms_memory_pagecache_size=1G
       - NEO4J_dbms.memory.heap.initial_size=1G
       - NEO4J_dbms_memory_heap_max__size=1G
+      - NEO4J_AUTH=neo4j/pwd
