back and front works

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,14 @@
 version: '3'
 services:
   frontend:
-    build: ./front
+    image: aminehajali/se-front
     ports:
-      - 3000:3000
+      - 80:80
     environment:
       - REACT_APP_BACKEND_URL=http://localhost:5000
 
   backend:
-    build: ./back
+    image: aminehajali/se-back
     ports:
       - 5000:5000
     environment:
