put volumes under the same directory

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,11 +31,11 @@ services:
       - 7474:7474
       - 7687:7687
     volumes:
-      - ./conf:/conf
-      - ./data:/data
-      - ./import:/import
-      - ./logs:/logs
-      - ./plugins:/plugins
+      - ./dvolumes/conf:/conf
+      - ./dvolumes/data:/data
+      - ./dvolumes/import:/import
+      - ./dvolumes/logs:/logs
+      - ./dvolumes/plugins:/plugins
     environment: 
       # Raise memory limits
       - NEO4J_dbms_memory_pagecache_size=1G
