--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,9 @@ version: '3'
 services:
   frontend:
     image: aminehajali/se-front
+    container_name: front
+    depends_on:
+      - datareader
     ports:
       - 80:80
     environment:
@@ -9,6 +12,9 @@ services:
 
   datareader:
     image: aminehajali/se-datareader
+    container_name: datareader
+    depends_on:
+      - neo4j
     ports:
       - 5000:5000
     environment:
@@ -18,15 +24,22 @@ services:
 
   dataloader:
     image: aminehajali/se-dataloader
+    container_name: dataloader
+    depends_on:
+      - neo4j
+      - rabbitmq
+    restart: unless-stopped
     ports:
       - 5001:5000
     environment:
       - NEO4J_URL=bolt://neo4j:7687
       - NEO4J_USERNAME=neo4j
       - NEO4J_PASSWORD=pwd
+      - RABBITMQ_URL=rabbitmq
 
   neo4j:
     image: neo4j:3.5
+    container_name: neo4j
     ports:
       - 7474:7474
       - 7687:7687
@@ -42,3 +55,12 @@ services:
       - NEO4J_dbms.memory.heap.initial_size=1G
       - NEO4J_dbms_memory_heap_max__size=1G
       - NEO4J_AUTH=neo4j/pwd
+
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    container_name: rabbitmq
+    ports:
+        - 5672:5672
+        - 15672:15672
+    volumes:
+        - ./dvolumes/rabbitmq/data/:/var/lib/rabbitmq/
