--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
       - NEO4J_USERNAME=neo4j
       - NEO4J_PASSWORD=pwd  
 
+  # TODO: This container keeps failing on startup while waiting for rabbitmq
   dataloader:
     image: aminehajali/se-dataloader
     container_name: dataloader
