--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,8 +3,6 @@ services:
   frontend:
     image: aminehajali/se-front
     container_name: front
-    depends_on:
-      - datareader
     ports:
       - 80:80
     environment:
@@ -13,8 +11,6 @@ services:
   datareader:
     image: aminehajali/se-datareader
     container_name: datareader
-    depends_on:
-      - neo4j
     ports:
       - 5000:5000
     environment:
@@ -22,21 +18,18 @@ services:
       - NEO4J_USERNAME=neo4j
       - NEO4J_PASSWORD=pwd  
 
-  # TODO: This container keeps failing on startup while waiting for rabbitmq
   dataloader:
     image: aminehajali/se-dataloader
     container_name: dataloader
-    depends_on:
-      - neo4j
-      - rabbitmq
-    restart: unless-stopped
     ports:
       - 5001:5000
+    command: sh -c "/wait && python3 loader/consumer.py"
     environment:
       - NEO4J_URL=bolt://neo4j:7687
       - NEO4J_USERNAME=neo4j
       - NEO4J_PASSWORD=pwd
       - RABBITMQ_URL=rabbitmq
+      - WAIT_HOSTS=rabbitmq:5672
 
   neo4j:
     image: neo4j:3.5
