--- a/back/Dockerfile.dataloader
+++ b/back/Dockerfile.dataloader
@@ -2,7 +2,7 @@ FROM python:3.8-slim-buster
 
 WORKDIR /app
 
-COPY data_loader/requirements.txt requirements.txt
+COPY requirements-dataloader.txt requirements.txt
 
 RUN pip3 install -r requirements.txt
 
