--- a/.github/workflows/pfe-se-ci.yml
+++ b/.github/workflows/pfe-se-ci.yml
@@ -17,15 +17,19 @@ jobs:
           - name: front
             dockerfile: ./front/Dockerfile
             tag: hajali-amine/pfe-search-engine-front
+            dir: front
           - name: dataloader
             dockerfile: ./back/Dockerfile.dataloader
             tag: hajali-amine/pfe-search-engine-dataloader
+            dir: back
           - name: datareader
             dockerfile: ./back/Dockerfile.datareader
             tag: hajali-amine/pfe-search-engine-datareader
+            dir: back
           - name: scrapper
             dockerfile: ./scrapper/Dockerfile
             tag: hajali-amine/pfe-search-engine-scrapper
+            dir: scrapper
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -46,7 +50,7 @@ jobs:
     - name: Build and publish a Docker image for ${{ matrix.name }}
       uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
       with:
-        context: .
+        context: ./${{ matrix.dir }}
         file: ${{ matrix.dockerfile }}
         push: true
         tags: ${{ matrix.tag }}
