--- a/.github/workflows/pfe-se-ci.yml
+++ b/.github/workflows/pfe-se-ci.yml
@@ -1,4 +1,4 @@
-name: PFE Search Engine CI
+name: PFE Search Engine CI 🔥
 
 on:
   push:
@@ -31,23 +31,23 @@ jobs:
             tag: ghcr.io/hajali-amine/pfe-search-engine-scrapper
             dir: scrapper
     steps:
-    - name: Checkout repository
+    - name: Checkout repository 📜
       uses: actions/checkout@v2
-    - name: Log in to the Container registry
+    - name: Log in to the Container registry ⚓
       uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GH_TOKEN }}
     # TODO: find better way to cache, this probably doesn't work
-    - name: Cache Docker image layers
+    - name: Cache Docker image layers 💾
       uses: satackey/action-docker-layer-caching@v0.0.11
       continue-on-error: true
       with:
         key: ${{ matrix.name }}-docker-cache-{hash}
         restore-keys: |
           ${{ matrix.name }}-docker-cache
-    - name: Build and publish a Docker image for ${{ matrix.name }}
+    - name: Build and publish a Docker image for ${{ matrix.name }} 🐋
       uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
       with:
         context: ./${{ matrix.dir }}
