Change container registry in scripts and docker compose

--- a/.github/workflows/pfe-se-ci.yml
+++ b/.github/workflows/pfe-se-ci.yml
@@ -2,7 +2,8 @@ name: PFE Search Engine CI 🔥
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
     paths-ignore:
       - '**/readme.md'
       - '**/assets/*'
