--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,5 +1,5 @@
 # Build Frontend
-FROM node:12-alpine as builder
+FROM node:12-alpine AS builder
 WORKDIR /app
 COPY package.json .
 RUN npm install
