Check if registry is available for login

--- a/.github/workflows/pfe-se-ci.yml
+++ b/.github/workflows/pfe-se-ci.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Checkout repository 📜
       uses: actions/checkout@v2
     - name: Log in to the Container registry ⚓
-      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      uses: docker/login-action@v2.1.0
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
