--- a/.github/workflows/pfe-se-ci.yml
+++ b/.github/workflows/pfe-se-ci.yml
@@ -38,16 +38,9 @@ jobs:
       uses: docker/login-action@v2.1.0
       with:
         registry: ghcr.io
-        username: ${{ github.actor }}
+        username: ${{ github.repository_owner }}
         password: ${{ secrets.GH_TOKEN }}
     # TODO: find better way to cache, this probably doesn't work
-    - name: Cache Docker image layers 💾
-      uses: satackey/action-docker-layer-caching@v0.0.11
-      continue-on-error: true
-      with:
-        key: ${{ matrix.name }}-docker-cache-{hash}
-        restore-keys: |
-          ${{ matrix.name }}-docker-cache
     - name: Build and publish a Docker image for ${{ matrix.name }} 🐋
       uses: docker/build-push-action@v3.2.0
       with:
@@ -55,3 +48,9 @@ jobs:
         file: ${{ matrix.dockerfile }}
         push: true
         tags: ${{ matrix.tag }}
+        cache-from: type=local,src=/tmp/.buildx-cache-${{ matrix.name }}
+        cache-to: type=local,dest=/tmp/.buildx-cache-${{ matrix.name }}-new
+    - name: Move cache 💾
+      run: |
+        rm -rf /tmp/.buildx-cache-${{ matrix.name }}
+        mv /tmp/.buildx-cache-${{ matrix.name }}-new /tmp/.buildx-cache-${{ matrix.name }}
