--- a/back/Dockerfile.datareader
+++ b/back/Dockerfile.datareader
@@ -10,9 +10,9 @@ COPY graph_driver graph_driver
 
 COPY graph_query_builder graph_query_builder
 
-COPY data_reader data_reader
+COPY datareader datareader
 
-ENV FLASK_APP=data_reader.api
+ENV FLASK_APP=datareader.api
 
 ENV NEO4J_USERNAME=neo4j
 
