--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
     container_name: dataloader
     ports:
       - 5001:5000
-    command: sh -c "/wait && python3 data_loader/consumer.py"
+    command: sh -c "/wait && python3 dataloader/consumer.py"
     environment:
       - NEO4J_URL=bolt://neo4j:7687
       - NEO4J_USERNAME=neo4j
