--- a/.github/workflows/pfe-se-ci.yml
+++ b/.github/workflows/pfe-se-ci.yml
@@ -38,7 +38,7 @@ jobs:
     steps:
     - name: Checkout repository 📜
       uses: actions/checkout@v2
-    - name: Login to Docker Hub
+    - name: Login to Docker Hub 🔒
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
