--- a/back/Dockerfile.datareader
+++ b/back/Dockerfile.datareader
@@ -20,6 +20,8 @@ ENV NEO4J_PASSWORD=pwd
 
 ENV NEO4J_URL=bolt://localhost:7687
 
+RUN opentelemetry-bootstrap --action=install
+
 EXPOSE 5000
 
-CMD flask run --host=0.0.0.0
+CMD OTEL_RESOURCE_ATTRIBUTES=service.name=datareader OTEL_EXPORTER_OTLP_ENDPOINT="http://${SIGNOZ_BACKEND}:4318"  opentelemetry-instrument --traces_exporter otlp_proto_http --metrics_exporter otlp_proto_http flask run --host=0.0.0.0
